--- a/app/src/main/res/layout/fragment_legend_detail.xml
+++ b/app/src/main/res/layout/fragment_legend_detail.xml
@@ -155,6 +155,7 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_marginTop="24dp"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/legendDetailName"
         tools:src="@tools:sample/avatars" />
