--- a/app/src/main/res/layout/fragment_add_legend.xml
+++ b/app/src/main/res/layout/fragment_add_legend.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="2"
-            android:inputType="text"
+            android:inputType="number|numberDecimal"
             app:layout_constraintBottom_toBottomOf="@+id/textView10"
             app:layout_constraintEnd_toEndOf="@+id/newLegendDamage"
             app:layout_constraintTop_toTopOf="@+id/textView10" />
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:ems="2"
-            android:inputType="text"
+            android:inputType="number|numberDecimal"
             app:layout_constraintBottom_toBottomOf="@+id/textView11"
             app:layout_constraintStart_toEndOf="@+id/textView11"
             app:layout_constraintTop_toTopOf="@+id/textView11" />
@@ -93,7 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="2"
-            android:inputType="text"
+            android:inputType="number|numberDecimal"
             app:layout_constraintBottom_toBottomOf="@+id/textView12"
             app:layout_constraintEnd_toEndOf="@+id/newLegendDefense"
             app:layout_constraintTop_toTopOf="@+id/textView12" />
